--- a/ios-app/sensor/SensorTodayExtension/Info.plist
+++ b/ios-app/sensor/SensorTodayExtension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>SensorTodayExtension</string>
+	<string>Henry's Room</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
